# CardioSafe-benchmark

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-DATA  README.md  pyproject.toml
data/: README.md
data/comparators/: README.md  cardiogenai_tan70_predictions.csv  ctoxpred2_tan70_predictions.csv
data/labels/: MANIFEST.json
data/splits/: CHANGELOG.md
data/supplementary/: figure_s1_herg_calibration.json  note_s1_yrand_data.json  note_s1_yrand_mechanism.md  note_s2_cliff_curation.md  note_s2_cliff_set_tan60.csv  note_s2_cliff_set_tan70.csv  note_s2_pair_id_composition.csv  note_s2_per_split_manifest.csv  note_s2_source_bibliography.csv  note_s3_v1_1_audit_correction.md  note_s3_v1_1_case_study.json  note_s3_v1_1_test_metrics.json  table_s0_descriptor_spec.csv  table_s0_descriptor_spec.md  table_s0_summary.json  table_s1_confusion_matrices.csv  table_s1_confusion_matrices.json  table_s1_confusion_matrices.md  table_s2_comparator_pre_de_leak.csv  table_s2_comparator_pre_de_leak.md  table_s3_comparator_post_de_leak.csv  table_s3_comparator_post_de_leak.md  table_s5_drug_panel_tan60.csv  table_s5_drug_panel_tan60.json  table_s5_drug_panel_tan60.md  table_s6_failure_modes.csv  table_s6_failure_modes.json  table_s6_failure_modes.md  table_s7_ad_per_bin.csv  table_s7_ad_per_bin.json  table_s7_ad_per_bin.md  table_s8_l1000_threshold_sweep.csv  table_s8_l1000_threshold_sweep.json  table_s8_l1000_threshold_sweep.md  table_s9_curation_sensitivity.csv  table_s9_curation_sensitivity.json  table_s9_curation_sensitivity.md  tables_s2_s3_paired_bootstrap.json
inference/: README.md  ensemble.py  example_smiles.csv  featurize.py  predict.py
model/: MODEL_CARD.md  chemberta_encoder.py  cross_attn.py  l1000_encoder.py
scripts/: README.md  audit_tanimoto_leak.py  publish_collection_to_hf.py  publish_dataset_to_hf.py  publish_space_to_hf.py  publish_to_hf.py
space/: README.md  app.py  requirements.txt
train/: README.md  losses.py  stage1_step.py  stage2.py
