[project]
name = "cardiosafe-benchmark"
version = "0.1.0"
description = "Splits, labels, and supplementary artifacts for the CardioSafe cardiac ion channel benchmark."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Mihailo Jovanović", email = "mihailo@appliedscientific.ai" },
    { name = "Lukas Weidener", email = "lukas@appliedscientific.ai" },
    { name = "Marko Brkić", email = "marko@appliedscientific.ai" },
    { name = "Emre Ulgac", email = "emre@appliedscientific.ai" },
    { name = "Aakaash Meduri", email = "aakaash@appliedscientific.ai" },
]
keywords = [
    "cardiac safety",
    "hERG",
    "Nav1.5",
    "Cav1.2",
    "CiPA",
    "QSAR",
    "ion channel",
    "ChEMBL",
    "benchmark",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=3.0",
    "rdkit>=2025.9.6",
]

[project.optional-dependencies]
train = [
    "torch>=2.6,<2.11",
    "torch-geometric>=2.6",
    "transformers>=4.51",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "xgboost>=3.2.0",
]
figures = [
    "matplotlib>=3.10.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[project.urls]
Homepage = "https://github.com/AppliedScientific/CardioSafe-benchmark"
Issues = "https://github.com/AppliedScientific/CardioSafe-benchmark/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cardiosafe"]

[tool.ruff]
line-length = 100
target-version = "py313"
