[project]
name = "cardiosafe-benchmark"
version = "0.1.0"
description = "Splits, labels, and supplementary artifacts for the CardioSafe cardiac ion channel benchmark (data deposit)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mihailo Jovanović", email = "mihailo@appliedscientific.ai" },
    { name = "Lukas Weidener", email = "lukas@appliedscientific.ai" },
    { name = "Marko Brkić", email = "marko@appliedscientific.ai" },
    { name = "Emre Ulgac", email = "emre@appliedscientific.ai" },
    { name = "Aakaash Meduri", email = "aakaash@appliedscientific.ai" },
]
keywords = [
    "cardiac safety",
    "hERG",
    "Nav1.5",
    "Cav1.2",
    "CiPA",
    "QSAR",
    "ion channel",
    "ChEMBL",
    "benchmark",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
audit = [
    "rdkit>=2025.9.6",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/AppliedScientific/CardioSafe-benchmark"
Paper = "https://www.biorxiv.org/content/10.64898/2026.05.06.723181v1"
Issues = "https://github.com/AppliedScientific/CardioSafe-benchmark/issues"
